# riskguard

./: .gitignore  CHANGELOG.md  LICENSE  README.en.md  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
examples/: 01_position_limit.py  02_circuit_breaker.py  03_kelly_sizing.py  04_monitor_daemon.py  05_audit_trail.py  06_with_vs_without.py  07_backtest_overlay.py  08_presets.py  09_the_cost_of_discipline.py  10_state_persistence.py  11_daily_digest.py  12_stress_test.py  _bootstrap.py
src/riskguard/: __init__.py  __main__.py  cli.py  config.py  engine.py  exceptions.py  models.py  persistence.py  presets.py  state.py
src/riskguard/audit/: __init__.py  base.py  jsonl.py  sqlite.py
src/riskguard/backtest/: __init__.py  backtesting_py.py  overlay.py  replay.py  vectorbt.py
src/riskguard/brokers/: __init__.py  alpaca.py  base.py  paper.py
src/riskguard/monitor/: __init__.py  daemon.py
src/riskguard/reporting/: __init__.py  _util.py  digest.py  stress.py
src/riskguard/rules/: __init__.py  _projection.py  base.py  daily_loss.py  drawdown.py  exposure.py  position_limit.py  price_band.py  quarantine.py  throttle.py
src/riskguard/sizing/: __init__.py  base.py  fixed.py  kelly.py  volatility.py
tests/: test_alpaca.py  test_audit_jsonl.py  test_audit_sqlite.py  test_backtest.py  test_cli.py  test_config.py  test_daily_loss.py  test_drawdown.py  test_engine.py  test_exposure.py  test_integration.py  test_models.py  test_monitor.py  test_paper_broker.py  test_persistence.py  test_position_limit.py  test_presets.py  test_price_band.py  test_quarantine.py  test_reporting.py  test_review_regressions.py  test_sizing.py  test_state.py  test_throttle.py
